# zelf-legacy-backend

./: Anchor.toml  Cargo.toml  RUN_SERVER.md  RUN_SMART_CONTRACT.md  readme.md  test_local.sh
app/: .env.example  CRON_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  email_template_preview.html  generate-payer.js  package-lock.json  package.json
app/src/: index.js
app/src/routes/: cron.js  email.js  inheritance.js  liveness.js
app/src/services/: email.js  lightProtocol.js
programs/inheritance_demo/: Cargo.toml
programs/inheritance_demo/src/: VerifikWallet.code-workspace  lib.rs
tests/: inheritance_demo.ts
